# awesome-ascend-skills

./: .gitignore  AGENTS.md  README.md
.claude-plugin/: marketplace.json
.github/: ROADMAP.md  external-sources.yml
.github/workflows/: opencode-review.yml  sync-external-skills.yml  validate-skills.yml
.sisyphus/: boulder.json
.sisyphus/plans/: roadmap-generation.md
ascend-basic-env/cann-install/: SKILL.md
ascendc/: SKILL.md
ascendc/ffn_example/: CMakeLists.txt  test_aclnn_ffn.cpp
ascendc/gmm_example/: CMakeLists.txt  test_aclnn_grouped_matmul.cpp
ascendc/references/: aclnn_example_template.md  genop_functionality_index.md  genop_usage.md  op_host_examples.md  op_host_json_types_flow.md  op_kernel_skeletons.md  type_format_reference.md
atc-model-converter/: SKILL.md
atc-model-converter/references/: CANN_VERSIONS.md  EXAMPLE_README.md  FAQ.md
atc-model-converter/scripts/: check_env_enhanced.sh  export_onnx.py  get_onnx_info.py  setup_env.sh
diffusers-ascend/: SKILL.md
diffusers-ascend/diffusers-ascend-env-setup/: SKILL.md
diffusers-ascend/diffusers-ascend-pipeline/: SKILL.md
diffusers-env-setup/: SKILL.md
diffusers-env-setup/references/: cann-versions.md
diffusers-env-setup/scripts/: validate_environment.py
docs/: VALIDATION_REPORT.md
github-issue-summary/scripts/: fetch_issue.py
npu-op-benchmark/scripts/: bench_op.py  (+1 more)
scripts/: sync_external_skills.py  sync_types.py  validate_config.py  validate_skills.py
tests/: test_sync_external_skills.py
vllm-bench-serve/: SKILL.md
wan-ascend-adaptation/: SKILL.md
(+58 files in other folders)
